# oauthcodex

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  RULES.md  SOURCE_MAP.md  UI_PLAN.md  WORKFLOW.md
.github/workflows/: build-desktop.yml
src/: error.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/adapters/: app_bridge.rs  events.rs  fs_store.rs  http_client.rs  mod.rs  oauth_callback_server.rs
src/domain/: account.rs  api_key.rs  codex_models.rs  config.rs  data_transfer.rs  group.rs  instance.rs  local_access.rs  mod.rs  model_provider.rs  oauth.rs  preferences.rs  quota.rs  session.rs  wakeup.rs
tests/: account_store.rs  app_bridge_contract.rs  codex_instances.rs  config_contract.rs  data_transfer.rs  oauth_flow.rs  quota.rs  ui_contract.rs  wakeup_scheduler.rs
tests/fixtures/account/: account_index.json  account_summary_list.json  apikey_openai_account.json  auth_file_apikey.json  auth_file_oauth.json  batch_import_partial.json  batch_import_valid.json  empty_account_index.json  oauth_pro_account.json
tests/fixtures/config/: codex_only_update.json  default_config.json  expected_after_codex_update.json  invalid_numeric_inputs.json  refresh_current_settings.json
tests/fixtures/data_transfer/: export_bundle.json  export_no_config.json  import_duplicate_group.json  import_invalid_provider.json  import_unresolved_refs.json
tests/fixtures/instances/: instance_default_only.json  instance_list.json  launch_command.json  quick_config.json
tests/fixtures/local_access/: collection.json  collection_empty.json  collection_stale_accounts.json  request_chat_completions.json  request_models.json  request_responses.json  request_with_tools.json  response_chat_completion.json  response_responses.json  response_stream_sse.txt  state_snapshot.json  stats_events.json
tests/fixtures/oauth/: callback_url.json  constants.json  pending_state.json  (+7 more)
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  main.tsx
ui/tests/: ui-components.test.tsx  ui-contract.test.ts
(+34 files in other folders)
