[package]
name = "oauthcodex-app"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
oauthcodex = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["custom-protocol"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
